--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "10": "^0.0.1",
+    "axios": "^1.4.0",
+    "i": "^0.3.7",
+    "ionicons": "^7.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "styled-components": "5.3",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
