--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "10": "^0.0.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "i": "^0.3.7",
     "ionicons": "^7.1.2",
